--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="ex06-5.js"> </script>
 <script src="ex06-6.js"> </script>
 <script src="ex06-7.js"> </script> 
+  <script src="ex06-8.js"> </script> 
 </head>
 <body>
 <h1>変数の練習65</h1>
@@ -27,6 +28,23 @@
 <input type="button"value="レイ"onclick="someone67('レイ');">
 <input type="button"value="アスカ"onclick="someone67('アスカ');">
 <input type="button"value="シンジ"onclick="someone67('シンジ');">
+ 
+<h1>変数の練習68</h1> 
+ <input type="button"value="あいさつ"onclick="sayhello68();">
+ <input type="button"value="太郎"onclick="taro68();">
+ <input type="button"value="花子"onclick="hanako68();"> 
+  <p id="who68">最初はworld</p>
+  
+ <h1>JavaScriptによるページの変数69</h1> 
+  <div id="txt1">
+    <input type="button" value="テキストの変更"
+    onclick="txtchange1();">
+    城西大学</div>
+ 
+
+  
+  
+  
   
   
   
