--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="ex06-6.js"> </script>
 <script src="ex06-7.js"> </script> 
   <script src="ex06-8.js"> </script> 
+    <script src="ex06-9.js"> </script> 
 </head>
 <body>
 <h1>変数の練習65</h1>
@@ -40,13 +41,16 @@
     <input type="button" value="テキストの変更"
     onclick="txtchange1();">
     城西大学</div>
- 
-
+ <div id="image1">
+   <input type="button" value="画像の変更" onclick="imgchange1();">
+   <img src='./image/josai.png' id="logo" alt="Josai Logo"></div>
   
-  
-  
-  
-  
+  <h1>タイマーイベントによる実行6-10</h1>
+  <from name="timer">
+    <input type="button"value="スタート"onclick="startfnc()">
+    <br>
+    <input type="text" name="moji" size="30"value=""></from>
+     
   
 </body>
 </html>
