--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
     <br>
     <input type="text" name="moji" size="30"value=""></from>
      
-  
+  <h1>javascriptの変数とデバッガを理解09-2
+<p>下のボタンを押すと数字が表示されます</p>
+<p><input type="button" value="実行ボタン"
+onclick="addCount()"></p>
+</body>  
+
 </body>
 </html>
