--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   
   <h1>タイマーイベントによる実行6-11</h1>
   
-  <from name="timer2">
+  <form name="timer2">
     
     <input type="button" value="スタート"onclick="hyoji2()">
     <br>
