--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
 </head>
 <body>
-<h1>変数の練習65</h1>
+<h1>変数の練習6-5</h1>
 <input type="button"value="あいさつ"onclick="sayhello65();">
 <input type="button"value="太郎"onclick="taro65();">
 <input type="button"value="花子"onclick="hanako65();">
   
-<h1>変数の練習66</h1>
+<h1>変数の練習6-6</h1>
 <input type="button"value="あいさつ"onclick="sayhello66();">
 <input type="button"value="太郎"onclick="taro66();">
 <input type="button"value="花子"onclick="hanako66();">
   
-<h1>変数の練習67</h1>
+<h1>変数の練習6-7</h1>
 <input type="button"value="あいさつ"onclick="sayhello67();">
 <input type="button"value="太郎"onclick="someone67('太郎');">
 <input type="button"value="花子"onclick="someone67('花子');">
@@ -35,7 +35,7 @@
 <input type="button"value="アスカ"onclick="someone67('アスカ');">
 <input type="button"value="シンジ"onclick="someone67('シンジ');">
  
-<h1>変数の練習68</h1> 
+<h1>変数の練習6-8</h1> 
  <input type="button"value="あいさつ"onclick="sayhello68();">
  <input type="button"value="太郎"onclick="taro68();">
  <input type="button"value="花子"onclick="hanako68();"> 
@@ -58,9 +58,12 @@
     <input type="text" name="moji" size="30"
     value=""></form>
   
+  <form>
+    <input type="button" value="Timer" onclick="setTimeout('mes()',3000)">
+  </form>
   <h1>タイマーイベントによる実行6-11</h1>
-  
   <form name="timer2">
+  
     
     <input type="button" value="スタート"onclick="hyoji2()">
     <br>
@@ -69,16 +72,16 @@
     
 
   <h1>タイマーイベントによる実行6-12</h1>
-  <form name="timer3">
-    <input type="button" value="3秒で変更" onclick="setTimeout('mes()',3000)">
-    <img src='./image/koka.png'id="logo2" alt="koka Logo">
+  
+    <input type="button" value="3秒で変更" onclick="ThreeSecChange();">
+    <img src='./image/josai.png'id="logo2" alt="josai Logo">
   </form>
   
   
-</h1>タイマーイベントによる実行の応用6-13</h1>
+<h1>タイマーイベントによる実行の応用6-13</h1>
     <div id="back">
-     <input type="button" value="変更後3秒でまた戻る"　onclick="ChangeImageAndBack()">
-     <img src='./image/koka.png' id="img13" alt="koka Logo" class="imagechange">
+     <input type="button" value="変更後3秒でまた戻る" onclick="ChangeImageAndBack();">
+     <img src='./image/josai.png' id="img13" alt="josai Logo" class="imagechange">
   
 </div>
 
